--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@angular/router": "^4.3.3",
     "@ngui/map": "^0.18.4",
     "@types/googlemaps": "^3.26.17",
+    "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ng2-charts": "^1.6.0",
     "rxjs": "5.1.1",
     "zone.js": "^0.7.7"
   },
